add bitswap handler for libp2p sc-network

--- a/substrate/client/network/Cargo.toml
+++ b/substrate/client/network/Cargo.toml
@@ -13,12 +13,16 @@ readme = "README.md"
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
 
+[build-dependencies]
+prost-build = "0.11"
+
 [dependencies]
 array-bytes = "6.1"
 async-channel = "1.8.0"
 async-trait = "0.1"
 asynchronous-codec = "0.6"
 bytes = "1"
+cid = "0.9.0"
 codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"] }
 either = "1.5.3"
 fnv = "1.0.6"
@@ -42,6 +46,7 @@ tokio-stream = "0.1.7"
 unsigned-varint = { version = "0.7.1", features = ["futures", "asynchronous_codec"] }
 zeroize = "1.4.3"
 prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../utils/prometheus" }
+prost = "0.11"
 sc-client-api = { path = "../api" }
 sc-network-common = { path = "common" }
 sc-network-types = { path = "types" }
