--- a/substrate/client/network/Cargo.toml
+++ b/substrate/client/network/Cargo.toml
@@ -59,6 +59,7 @@ wasm-timer = "0.2"
 litep2p = { path = "/home/altonen/code/rust/litep2p" }
 once_cell = "1.18.0"
 void = "1.0.2"
+schnellru = "0.2.1"
 
 [dev-dependencies]
 assert_matches = "1.3"
