--- a/substrate/client/network/Cargo.toml
+++ b/substrate/client/network/Cargo.toml
@@ -70,8 +70,10 @@ tempfile = "3.1.0"
 tokio = { version = "1.22.0", features = ["macros"] }
 tokio-util = { version = "0.7.4", features = ["compat"] }
 tokio-test = "0.4.2"
+sc-block-builder = { path = "../block-builder" }
 sc-network-light = { path = "light" }
 sc-network-sync = { path = "sync" }
+sp-consensus = { path = "../../primitives/consensus/common" }
 sp-test-primitives = { path = "../../primitives/test-primitives" }
 sp-tracing = { path = "../../primitives/tracing" }
 substrate-test-runtime = { path = "../../test-utils/runtime" }
